second test commit

--- a/SignalRTestSolution/wwwroot/index.html
+++ b/SignalRTestSolution/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title>SignalR Test Solution</title>
 </head>
 <body>
-    <div class="divDlyaComita" id="loginBlock">
+    <div class="testDiv" id="loginBlock">
         <p>
             Enter login:<br />
             <input id="email" type="text" />
